--- a/Task5/dashboard_style.css
+++ b/Task5/dashboard_style.css
@@ -162,6 +162,7 @@ body{
     align-items: center;
     justify-content: center;
     margin: 15px 30px 0px 30px;
+    
 }
 
 .container_1{
@@ -170,8 +171,9 @@ body{
     padding-bottom: 0px;
     width: 590px;
     background-color: white;
+    
 }
-
+ 
 .container_2 {
     position: relative;
     display: inline-block;
@@ -347,6 +349,7 @@ p > span {
     }
     .container_1{
         width: 700px;
+        cursor: pointer;
     }
     .head{
         display: flex;
