--- a/Task6/style.css
+++ b/Task6/style.css
@@ -155,7 +155,7 @@ body{
     margin: 15px 30px 0px 30px;
 }
 
-.container-1{
+.container_1{
     padding: 24px;
     margin: 15px 15px 15px 15px;
     padding-bottom: 0px;
@@ -163,7 +163,7 @@ body{
     background-color: white;
 }
 
-.container-2 {
+.container_2 {
     position: relative;
     display: inline-block;
 }
@@ -255,7 +255,7 @@ strong{
     padding-bottom: 13px;
 }
 
-.img-effect{
+.img_effect{
     margin-left: 10px;
     width: 25px;
     height: 25px;
@@ -337,7 +337,7 @@ p > #spn {
     .items > div {
         margin-right: 30px;
     }
-    .container-1{
+    .container_1{
         width: 700px;
     }
     .head{
